# graphics-physics

./: CMakeLists.txt  Makefile  README.md
lib/: gl.c
lib/glad/: egl.h  gl.h  glx.h
src/: Shader.cpp  Shader.h  main.cpp
src/shaders/: fragemtn.glsl  fragment.glsl  vertex.glsl
